[gd_scene load_steps=5 format=2]

[ext_resource path="res://btn_normal.tres" type="StyleBox" id=1]
[ext_resource path="res://btn_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://btn_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
custom_constants/separation = 30

[node name="btnPlay" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
text = "Play"

[node name="btnSettings" type="Button" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 400.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
text = "Settings"

[node name="btnExit" type="Button" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 80 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 1 )
text = "Exit"
